--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -6,12 +6,46 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    #div1{
+        height: 200px;
+        width: 200px;
+        background-color: cadetblue;
+        padding-top: 0ch;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 40px;
+        border: 10px solid black;
+        margin: 0px;
 
+    }
+    #div2{
+      height: 200px;
+      width: 200px; 
+      border: 20px solid black;
+      border-left: 10px solid black;
+      border-right: 10px solid black;
+      margin-left: 260px;
+      background-color: gold;
+    }
+    #div3{
+      height: 200px;
+      width: 200px;
+      border: 10px solid black;
+      margin-left: 40px;
+      background-color: indianred;
+    }
   </style>
 </head>
 
 <body>
 
+<div id="div1">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+  id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+  dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p>
+</div>
+<div id="div2"></div>
+<div id="div3"></div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
