--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -6,16 +6,21 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    
+    p{
+    margin: 0px;
+    }
+
     #div1{
         height: 200px;
         width: 200px;
         background-color: cadetblue;
-        padding-top: 0ch;
+        padding-top: 20px;
         padding-left: 20px;
         padding-right: 20px;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
         border: 10px solid black;
-        margin: 0px;
+
 
     }
     #div2{
